java 8 version working (for porting to web)